-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 24
-
Component/s: core-libs
-
None
The java/util/concurrent/ConcurrentHashMap/MapLoops test fails in a debug build.
The test invocation includes `-XX:LockingMode=0 -XX:+VerifyHeavyMonitors`
The VM error message is:
"-XX:+VerifyHeavyMonitors requires LockingMode == 0 (LM_MONITOR)"
The LockingMode is 1, causing the failure.
When preview is enabled, the LockMode is overridden and the argument ignored.
The test invocation includes `-XX:LockingMode=0 -XX:+VerifyHeavyMonitors`
The VM error message is:
"-XX:+VerifyHeavyMonitors requires LockingMode == 0 (LM_MONITOR)"
The LockingMode is 1, causing the failure.
When preview is enabled, the LockMode is overridden and the argument ignored.
- links to
-
Commit
openjdk/valhalla/51349f32
-
Review(lworld)
openjdk/valhalla/1124