8334140: [lworld] -XX:LockingMode=0 ignored makes MapLoops fail The default for lightweight locking should only be overridden if Valhalla is enabled.