src/hotspot/share/runtime/arguments.cpp
@@ -1830,7 +1830,7 @@ bool Arguments::check_vm_args_consistency() {
   }
 
   // Valhalla missing LM_LIGHTWEIGHT support just now
-  if (EnableValhalla && LockingMode != LM_LEGACY) {
+  if (EnableValhalla && LockingMode == LM_LIGHTWEIGHT ) {
     FLAG_SET_CMDLINE(LockingMode, LM_LEGACY);
   }
 #if !defined(X86) && !defined(AARCH64) && !defined(RISCV64) && !defined(ARM) && !defined(PPC64) && !defined(S390)
